# bannerengine

./: .env.example  .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml
app/: config.py  main.py  session.py
app/core/: dependencies.py  exceptions.py  svg_renderer.py  xml_parser.py
app/models/: banner.py  slot.py  template.py
app/routers/: ai_generation.py  assets.py  custom.py  export.py  generate.py  image_generate.py  layers.py  pages.py  preview.py  slots.py  templates.py
app/services/: banner_service.py  gemini_service.py  image_generation_service.py  nano_banana_client.py  preview_service.py  slot_service.py  template_service.py
app/templates/: base.html
app/templates/components/: slot_position_editor.html
app/templates/components/slot_types/: background_slot.html  button_slot.html  image_or_text_slot.html  image_slot.html  shape_slot.html  text_slot.html
app/templates/pages/: editor.html  index.html
app/templates/partials/: ai_tab.html  category_list.html  custom_upload.html  generate_result.html  layer_sidebar.html  preview_canvas.html  slot_editor.html  template_card.html  template_detail.html  template_grid.html
docs/: spec_image_prompt_field.md  specification.md
static/css/: style.css
static/js/: app.js
tests/: conftest.py
tests/fixtures/: empty_slots.xml  invalid.xml  sample_car.xml
tests/integration/: test_api.py  test_assets_api.py  test_image_generate_api.py  test_pages.py  test_template_response_compat.py
tests/unit/: test_banner_service.py  test_generate_pipeline.py  test_image_generation_service.py  test_image_prompt_models.py  test_nano_banana_client_v2.py  test_preview_service.py  test_slot_prompt_persistence.py  test_slot_validation.py  test_svg_renderer.py  test_svg_renderer_mixed_types.py  test_svg_renderer_prompt.py  test_template_service.py  test_xml_parser.py
xml_templates/animal_funding/: animal_funding.xml
xml_templates/apparel/: apparel.xml
xml_templates/dressing/: dressing.xml
xml_templates/ramen/: ramen.xml
xml_templates/stationery/: stationery.xml
xml_templates/used_car/: used_car.xml
